@@ -11,6 +11,7 @@
 	  the code to use port get/set function
 	* src/racoon/admin.c: fix memory leak (Coverity)
 	* src/racoon/algorithm.c: fix array overrun (Coverity)
+	* src/racoon/isakmp_ident.c: Remove dead code (Coverity)
 	
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
